add jwt and complete swagger crud apis
